# TKEvent

./: CITATION.cff  CITATION.cff.txt  README
ANALYSIS_MACROS/: install.sh  load_ev.cpp  radii.cpp  reco_ev.cpp  show.cpp  track_scan.cpp  visu.cpp
ANALYSIS_MACROS/Events_visu/: Run-728_event-0_3D.root  Run-974_event-0_3D.root
Event3D/: CMakeLists.txt  install.sh
Event3D/src/: Event_3D.cpp
RED_to_TK/: CMakeLists.txt  install.sh  load_environment_v1.sh  load_environment_v2.sh  load_environment_v3.sh  red_to_tk.cxx  red_to_tk_new.cxx  red_to_tk_v1.cpp  red_to_tk_v1.cxx  red_to_tk_v2.cpp  red_to_tk_v2.cxx  red_to_tk_v3.cxx
TKEvent/: CMakeLists.txt  TKEvent.cpp  install.sh
TKEvent/ANALYSIS_MACROS/: load_ev.cpp  visu.cpp
TKEvent/RED_to_TK/: red_to_tk.cxx
TKEvent/TKEvent/: CMakeLists.txt  install.sh
TKEvent/TKEvent/include/: TKEvent.h  TKOMhit.h  TKtrack.h  TKtrhit.h
TKEvent/TKEvent/src/: TKEvent.cpp  TKOMhit.cpp  TKtrack.cpp  TKtrhit.cpp
TKEvent/TKEvent/src/dicts/: TKEventdict.cpp  TKOMhitdict.cpp  TKtrackdict.cpp  TKtrhitdict.cpp
TKEvent/include/: TKEvent.h  TKOMhit.h  TKcluster.h  TKpoint.h  TKtimer.h  TKtrack.h  TKtrajectory.h  TKtrhit.h
TKEvent/lib/: TKEventdict_rdict.pcm  TKOMhitdict_rdict.pcm  TKclusterdict_rdict.pcm  TKpointdict_rdict.pcm  TKtimerdict_rdict.pcm  TKtrackdict_rdict.pcm  TKtrajectorydict_rdict.pcm  TKtrhitdict_rdict.pcm
TKEvent/src/: TKEvent.cpp  TKOMhit.cpp  TKcluster.cpp  TKpoint.cpp  TKtimer.cpp  TKtrack.cpp  TKtracking_tools.cpp  TKtrajectory.cpp  TKtrhit.cpp
TKEvent/src/dicts/: TKEventdict.cpp  TKOMhitdict.cpp  TKclusterdict.cpp  TKpointdict.cpp  TKtimerdict.cpp  TKtrajectorydict.cpp
TKEvent_REDversion/: CMakeLists.txt  README  TKEvent.cc  TKEvent.hh  build_event_3D.cc  build_event_3D.hh  double_beta_finder.cxx  double_betas.cxx  test.cxx  visu.cpp
TKEvent_separate_version/ANALYSIS_MACROS/: visu.cpp
TKEvent_separate_version/Event3D/include/: Event_3D.hh
TKEvent_separate_version/RED_to_TK/: CMakeLists.txt  install.sh  red_to_tk.cxx
